--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://anujna14.github.io/anujna_profile",
   "name": "my-profile",
   "version": "0.1.0",
   "private": true,
@@ -38,6 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "http://anujna14.github.io/anujna_profile"
+  }
 }
